--- a/computer-setup.html
+++ b/computer-setup.html
@@ -82,19 +82,19 @@ than using the typical LMS. It will seem foreign when you start but be a little 
 </li>
 <li>
 <p>You will see a page like the one shown below. Click on 'Accept this assignment'.
-<img alt="Alt" src="../images/github-accept-assignment-part1.png" title="GitHub Project Accept Page 1" /></p>
+<img alt="Alt" src="images/github-accept-assignment-part1.png" title="GitHub Project Accept Page 1" /></p>
 </li>
 <li>
 <p>That will take you to a page like this.
-<img alt="Alt" src="../images/github-accept-assignment-part2.png" title="GitHub Project Accept Page 2" /></p>
+<img alt="Alt" src="images/github-accept-assignment-part2.png" title="GitHub Project Accept Page 2" /></p>
 </li>
 <li>
 <p>Clicking on the link (yours will be similar) will bring to a page like this. If you see this you are almost there.<br />
-<img alt="Alt" src="../images/github-accept-assignment-part3.png" title="GitHub Project Accept Page 3" /></p>
+<img alt="Alt" src="images/github-accept-assignment-part3.png" title="GitHub Project Accept Page 3" /></p>
 </li>
 <li>
 <p>Copy the Repo URL
-<img alt="Alt" src="../images/github-accept-assignment-part6.png" title="GitHub Project Accept Page 6" /></p>
+<img alt="Alt" src="images/github-accept-assignment-part6.png" title="GitHub Project Accept Page 6" /></p>
 </li>
 </ol>
 <h2 id="4-setup-or-cloning-class-folder-on-your-laptop">4. Setup or Cloning Class Folder <strong><em>on your laptop</em></strong></h2>
@@ -108,7 +108,7 @@ than using the typical LMS. It will seem foreign when you start but be a little 
 </li>
 <li>
 <p>Paste the URL you copied in step 3.6 into the box.
-<img alt="Alt" src="../images/github-accept-assignment-part7.png" title="GitHub Project Accept Page 7" /></p>
+<img alt="Alt" src="/images/github-accept-assignment-part7.png" title="GitHub Project Accept Page 7" /></p>
 </li>
 <li>
 <p>Local Path refers to the folder on your computer where you want the course folder to reside. Click 'Choose' and browse to say your 'My Documents' folder</p>
@@ -118,7 +118,7 @@ than using the typical LMS. It will seem foreign when you start but be a little 
 </li>
 <li>
 <p>Good work. You are done...cloning the class repo.
-<img alt="Alt" src="../images/github-accept-assignment-part8.png" title="GitHub Project Accept Page 8" /></p>
+<img alt="Alt" src="/images/github-accept-assignment-part8.png" title="GitHub Project Accept Page 8" /></p>
 </li>
 </ol>
 </div>
