--- a/index.html
+++ b/index.html
@@ -44,44 +44,44 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="schedule/week01.html">Week 1</a></td>
+<td><a href="schedule/week01/">Week 1</a></td>
 <td>08/27 and 08/29</td>
-<td><a href="schedule/week01.html">Course Introduction &amp; How does the web work?</a></td>
+<td><a href="schedule/week01/">Course Introduction &amp; How does the web work?</a></td>
 </tr>
 <tr>
-<td><a href="schedule/week02.html">Week 2</a></td>
+<td><a href="schedule/week02/">Week 2</a></td>
 <td>09/03 and 09/05</td>
-<td><a href="schedule/week02.html">HTML</a></td>
+<td><a href="schedule/week02/">HTML</a></td>
 </tr>
 <tr>
-<td><a href="schedule/week03.html">Week 3</a></td>
+<td><a href="schedule/week03/">Week 3</a></td>
 <td>09/10 and 09/12</td>
-<td><a href="schedule/week03.html">More HTML</a></td>
+<td><a href="schedule/week03/">More HTML</a></td>
 </tr>
 <tr>
-<td><a href="schedule/week04.html">Week 4</a></td>
+<td><a href="schedule/week04/">Week 4</a></td>
 <td>09/17 and 09/19</td>
 <td><a href="schedule/week04.html">Introduction to CSS</a></td>
 </tr>
 <tr>
-<td><a href="schedule/week05.html">Week 5</a></td>
+<td><a href="schedule/week05/">Week 5</a></td>
 <td>09/24 and 09/26</td>
-<td><a href="schedule/week05.html">Web Dev. Lifecycle, CSS Selectors</a></td>
+<td><a href="schedule/week05/">Web Dev. Lifecycle, CSS Selectors</a></td>
 </tr>
 <tr>
-<td><a href="schedule/week06.html">Week 6</a></td>
+<td><a href="schedule/week06/">Week 6</a></td>
 <td>10/01 and 10/03</td>
-<td><a href="schedule/week06.html">Basic Layouts in CSS</a> <strong>Wireframes Due</strong></td>
+<td><a href="schedule/week06/">Basic Layouts in CSS</a> <strong>Wireframes Due</strong></td>
 </tr>
 <tr>
-  <td><a href="schedule/week07.html">Week 7</a></td>
+  <td><a href="schedule/week07/">Week 7</a></td>
 <td>10/08 and 10/10</td>
-  <td><a href="schedule/week07.html">Mid-term Exam, More CSS Layout</a></td>
+  <td><a href="schedule/week07/">Mid-term Exam, More CSS Layout</a></td>
 </tr>
 <tr>
-<td><a href="schedule/week08.html">Week 8</a></td>
+<td><a href="schedule/week08/">Week 8</a></td>
 <td>10/15 and 10/17</td>
-<td><a href="schedule/week08.html">Responsive Design</a></td>
+<td><a href="schedule/week08/">Responsive Design</a></td>
 </tr>
 <tr>
 <td><strong>Project Deliverable</strong></td>
@@ -89,14 +89,14 @@
 <td><strong>Semantic HTML (v1)</strong></td>
 </tr>
 <tr>
-<td><a href="schedule/week09.html">Week 9</a></td>
+<td><a href="schedule/week09/">Week 9</a></td>
 <td>10/22 and 10/24</td>
-<td><a href="schedule/week09.html">Web Content Accessibility, HTML Forms</a></td>
+<td><a href="schedule/week09/">Web Content Accessibility, HTML Forms</a></td>
 </tr>
 <tr>
-<td><a href="schedule/week10.html">Week 10</a></td>
+<td><a href="schedule/week10/">Week 10</a></td>
 <td>10/29 and 10/31</td>
-<td><a href="schedule/week10.html">Intro. to Bootstrap</a></td>
+<td><a href="schedule/week10/">Intro. to Bootstrap</a></td>
 </tr>
 <tr>
 <td><strong>Project Deliverable</strong></td>
@@ -104,14 +104,14 @@
 <td><strong>v2 of Project Website</strong></td>
 </tr>
 <tr>
-<td><a href="schedule/week11.html">Week 11</a></td>
+<td><a href="schedule/week11/">Week 11</a></td>
 <td>11/05 and 11/07</td>
-<td><a href="schedule/week11.html">Bootstrap Components</a></td>
+<td><a href="schedule/week11/">Bootstrap Components</a></td>
 </tr>
 <tr>
-<td><a href="schedule/week12.html">Week 12</a></td>
+<td><a href="schedule/week12/">Week 12</a></td>
 <td>11/12 and 11/15</td>
-<td><a href="schedule/week12.html">Bootstrap Layouts</a></td>
+<td><a href="schedule/week12/">Bootstrap Layouts</a></td>
 </tr>
 <tr>
 <td>&mdash;</td>
