--- a/work-with-github.html
+++ b/work-with-github.html
@@ -11,7 +11,6 @@
 <body>
     <main>
         <section>
-        <section>
             <h1>Working with GitHub</h1>
             <p>Our class uses GitHub as a repository for our html files, then we use its GitHub Pages function to display the work as public webpages. This involves a few steps you'll need to take:
             <ol>
@@ -29,43 +28,40 @@
                 <li>Enter a name for your repository &mdash; all lower-case, no spaces!</li>
                 <li>Click the <strong>Create Repository</strong> CTA.</li>
             </ol>
-            <h3>Enable GitHub Pages Display</h3>
+            <h2>Enable GitHub Pages Display</h2>
             <ol>
                 <li>Open your repo, as in step 2 above, then select the <strong>Settings</strong> tab.</li>
                 <li>Scroll down to the <strong>GitHub Pages</strong> heading, then confirm that your <strong>master</strong> branch is selected as the site Data Source. If not, follow <a href="https://help.github.com/en/articles/configuring-a-publishing-source-for-github-pages" target="_blank">instructions here</a> to make that selection now.</li>
                 <li>Copy the GitHub Pages address above the data source selector to a browser window (the browser will show a 404 error at this point) and bookmark it. This will be the start of any of your GitHub Pages display.</li>
-                <li>Close Settings, then select the <a href="#">create new page</a> link or CTA.</li>
+                <li>Close Settings, then select the <a href="#">create new page/file</a> link or CTA.</li>
                 <li>Enter this filename for your new page: <code>index.html</code>, then enter some text for you page, something like "This will be the base index.html page."</li>
                 <li>Scroll down and select the <strong>Commit changes</strong> CTA.</li>
-                <li>Edit the URL in your browser window address bar, then click Enter: <code>week-02/01/labs/about-me.html</code><br />
-                Your URL should be formed like this: <code>https://[your-GitHub-user-id].github.io/[your-repo-id]/week-02/01/labs/about-me.html</code></li>
+                <li>Edit the URL in your browser window address bar to add <code>/index.html</code> and press Enter.<br />
+                Your URL should be formed like this: <code>https://[your-GitHub-user-id].github.io/[your-repo-id]/index.html</code></li>
                 <li>Admire your first published web page!</li>
             </ol>
-            <h2>Submit to GitHub</h2>
+            <h2>Create Files and Submit to GitHub</h2>
             <ol>
-                <li>Login to your GitHub account.</li>
-                <li>Click your profile icon at the upper right and select <strong>Your Repositories</strong>. <img src="images/your-repositories.png" align="right" alt="your repositories menu" /></li> 
-                    <ul>
-                        <li>Select the repo where you'll upload your file.</li>
-                        <li>If your account doesn't yet have any repos, select Create a new repository. <img src="images/new-repo.png" alt="new repo cta" /></li>
-                    </ul>
-                <li>Select the repo's Settings tab and scroll down to the GitHub Pages heading, then confirm that your <strong>master</strong> branch is selected as the site Data Source. If not, follow <a href="https://help.github.com/en/articles/configuring-a-publishing-source-for-github-pages" target="_blank">instructions here</a> to make that selection now.</li>
-                <li>Copy the GitHub Pages address above the data source selector to a browser window.</li>
-                <li>Close Settings, then select the <a href="#">create new page</a> link or call-to-action (CTA, also known as a "button").</li>
-                <li>Key the following path into the 'Name Your File' input box: <code>week-02/01/labs/readme.md</code> and enter text '<code>readme.md</code>' (or other placeholder text) into the editor window.<br />
-                    <img src="images/name-your-file.png" alt="name your file input" /></li>
+                <li>Open VS Code and add the code for your new .html page and save it on your local machine.
+                <li>Login to your GitHub account and open your personal repository.</li>
+                <li>Navigate to the GitHub folder where you want to place your .html file.</li>
+                <li>Select the <strong>Upload files</strong> CTA.</li>
+                <li>Drag and drop from your file explorer or finder, or click <strong>Choose your files</strong> and select one or more files from your computer's file system, then click strong>Open</strong>.
                 <li>Scroll down and select the <strong>Commit changes</strong> CTA.</li>
-                <li>Add this path and filename in your browser window address bar, then click Enter: <code>week-02/01/labs/about-me.html</code><br />
-                Your URL should be formed like this: <code>https://[your-GitHub-user-id].github.io/[your-repo-id]/week-02/01/labs/about-me.html</code></li>
-                <li>Admire your first published web page!</li>
+                <li>Add your filename in your browser window address bar, then click Enter.<br />
+                Your URL should be formed like this: <code>https://[your-GitHub-user-id].github.io/[your-repo-id]/your-filename.html</code></li>
+                <li>Admire your newly added or updated web page!</li>
             </ol>
-            <h2>Viewing the file in your browser</h2>
+            <h2>Add New Folders in GitHub</h2>
             <ul>
-                <li>In the VS Code sidebar, right click on the new file you created and choose 'Reveal in Finder' or 'Reveal in Explorer'</li>
-                <li>This will lauch Finder or Windows Explorer in the folder</li>
-                <li>You can now double click on the 'about-me.html' or right click the file and go to 'Open with' and choose your web browser</li>
+                <li>Login to your GitHub account and open your personal repository.</li>
+                <li>Navigate to the GitHub folder where you want to place your new subfolder(s).</li>
+                <li>In the Name Your File input, enter the new folder's name (all lower-case, no spaces!) followed by a slash (/); repeat as needed to define the folder structure you want.</li>
+                <li>Enter a new filename <code>index.html</code> after all your folder names are in place.</li>
+                <li>Type some text in editor window, something like "This will be the new index.html file."</li>
+                <li>Scroll down and select the <strong>Commit changes</strong> CTA.</li>
+                <li>You can now navigate to your new folder and upload files &mdash; .html, images, or others &mdash; as described above.</li>
             </ul>
-        </section>
         </section>
     </main>
 </body>
